--- a/inst/rmarkdown/templates/pfgsea/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/pfgsea/skeleton/skeleton.Rmd
@@ -1,39 +1,9 @@
 ---
 params:
   title: "Gene Set Enrichment Analysis"
-  
-  # Use DESeqAnalysis object as input.
-  # Basic: Load from file on disk, either RDS or RDA.
-  # Advanced: Loop across multiple objects using `rmarkdown::render()`.
-  object: "rds/YYYY-MM-DD/deseqanalysis.rds"
-  
-  # The `name` param is only necessary when passing in object directly, during
-  # an `rmarkdown::render()` call. See `object` param.
-  # name: "object_name"
-  
-  # MSigDb GMT files downloaded from the Broad Institute.
-  # Email registration is required for these files.
-  gmt_dir: "~/msigdb/msigdb_v6.2_GMTs"
-  
-  # Either values are acceptable:
-  # 1. Wald test statistic ("stat").
-  # 2. Shrunken LFC ("log2FoldChange").
-  gsea_value: "stat"
-  
-  # GSEA alpha cutoff.
-  # Doesn't have to match the alpha used for DESeqResults.
-  alpha: 0.05
-  
-  min_size: 15
-  max_size: 500
-  n_perm: 1000
-  
-  # Number of pathways (both directions) to include in plots.
-  n_pathways: 10
-  
-  rdata_dir: !r file.path("rds", Sys.Date())
+  fgsealist_file: "rds/YYYY-MM-DD/object.rds"
   output_dir: !r file.path("results", Sys.Date(), "gsea")
-
+  n_pathways: 10
 title: "`r params$title`"
 author: "`r getOption('author')`"
 date: "`r Sys.Date()`"
@@ -42,7 +12,6 @@ bibliography: bibliography.bib
 
 ```{r setup, message=FALSE}
 # Last modified 2019-04-30
-library(DESeqAnalysis)
 library(pfgsea)
 library(tidyverse)
 prepareTemplate()
@@ -52,55 +21,32 @@ source("_setup.R")
 ```{r header, child="_header.Rmd"}
 ```
 
-# Load DESeqAnalysis object
+# Load FGSEAList object
 
-Import the `DESeqAnalysis` S4 class object. This single object contains everything we need to perform GSEA.
+Import the `FGSEAList` S4 class object. This single object contains everything we need to visualize the GSEA results.
 
 ```{r load-object}
-if (is.character(params$object)) {
-    if (fileExt(params$object) == "rds") {
-        object <- readRDS(file = params$object)
-        name <- basenameSansExt(params$object)
-    } else if (fileExt(params$object) == "rda") {
-        name <- load(params$object)
-        object <- get(name, inherits = FALSE)
-    }
-} else {
-    object <- params$object
-    name <- params$name
+file <- params$fgsealist_file
+stopifnot(file.exists(file))
+if (fileExt(file) == "rds") {
+    object <- readRDS(file)
+    name <- basenameSansExt(file)
+} else if (fileExt(file) == "rda") {
+    name <- load(file)
+    object <- get(name, inherits = FALSE)
 }
+rm(file)
 stopifnot(
-    is(object, "DESeqAnalysis"),
+    is(object, "FGSEAList"),
     is.character(name)
 )
 invisible(validObject(object))
 print(object)
 ```
 
-All genes can be used in Gene Set Enrichment Analysis (GSEA). GSEA aggregates the per gene statistics across genes within a gene set, therefore making it possible to detect situations where all genes in a predefined set change in a small but coordinated way. Since it is likely that many relevant phenotypic differences are manifested by small but consistent changes in a set of genes. GSEA uses a ranked list of genes (here ranked by the test statistic), without applying a per-gene *P* value significance cutoff. This allows the analysis to use more information to identify enriched biological processes. The [GSEA introduction](http://www.ncbi.nlm.nih.gov/pmc/articles/PMC1239896) goes into more detail about some of the advantages of this approach.
+# Ranked gene list input
 
-# MSigDb GMT files
-
-Here we are using pathways from the MSigDB database. GSEA requires a gene list containing names that match the gene names in the MSigDb pathways list (i.e. gene symbols instead of Ensembl gene IDs).
-
-Before proceeding, first download the [MSigDb 6.2 release](http://software.broadinstitute.org/gsea/msigdb/download_file.jsp?filePath=/resources/msigdb/6.2/msigdb_v6.2_files_to_download_locally.zip) and extract the ZIP archive, which will contain GMT files. Note that e-mail registration is required to access resources at the Broad Institute.
-
-```{r gmt-files}
-gmt_files <- list.files(
-    path = params$gmt_dir,
-    pattern = "all.v6.2.symbols.gmt$",
-    full.names = TRUE
-)
-names(gmt_files) <- str_extract(
-    string = basename(gmt_files),
-    pattern = "^[[:alnum:]]+"
-)
-print(basename(gmt_files))
-```
-
-# Ranked gene list
-
-Prepare a ranked `numeric vector` [gene list](https://github.com/GuangchuangYu/DOSE/wiki/how-to-prepare-your-own-geneList) for GSEA.
+A ranked `numeric vector` [gene list](https://github.com/GuangchuangYu/DOSE/wiki/how-to-prepare-your-own-geneList) is used as input for fast, parameterized GSEA. This is stored as a `RankedList` S4 class object by pfgsea, and internally named as `rankedlist` in the `metadata()` slot of the `FGSEAList` object.
 
 It requires three features:
 
@@ -110,18 +56,15 @@ It requires three features:
 
 Note that [MSigDb][] requires that the identifiers map either to HGNC names (gene symbols) or Entrez IDs. We prefer to map using the gene symbols, but these are not 1:1 for all Ensembl gene IDs (e.g. ENSG00000000003 = TSPAN6). In the event that there are Ensembl gene IDs per HGNC symbol, we're taking the average of the values here.
 
-```{r ranked-list}
-ranked_list <- RankedList(object, value = params$gsea_value)
-lapply(ranked_list, head)
-lapply(ranked_list, summary)
-assignAndSaveData(
-    name = paste(name, "ranked_list", sep = "_"),
-    object = ranked_list,
-    dir = params$rdata_dir
-)
-```
+# MSigDb GMT files
 
-# Run GSEA
+Here we are using pathways from the MSigDB database. GSEA requires a gene list containing names that match the gene names in the MSigDb pathways list (i.e. gene symbols instead of Ensembl gene IDs).
+
+Before proceeding, first download the [MSigDb 6.2 release](http://software.broadinstitute.org/gsea/msigdb/download_file.jsp?filePath=/resources/msigdb/6.2/msigdb_v6.2_files_to_download_locally.zip) and extract the ZIP archive, which will contain GMT files. Note that e-mail registration is required to access resources at the Broad Institute.
+
+# Running GSEA
+
+All genes can be used in Gene Set Enrichment Analysis (GSEA). GSEA aggregates the per gene statistics across genes within a gene set, therefore making it possible to detect situations where all genes in a predefined set change in a small but coordinated way. Since it is likely that many relevant phenotypic differences are manifested by small but consistent changes in a set of genes. GSEA uses a ranked list of genes (here ranked by the test statistic), without applying a per-gene *P* value significance cutoff. This allows the analysis to use more information to identify enriched biological processes. The [GSEA introduction](http://www.ncbi.nlm.nih.gov/pmc/articles/PMC1239896) goes into more detail about some of the advantages of this approach.
 
 This section is a modified version of Stephen Turner's excellent [DESeq results to pathways in 60 Seconds with the fgsea package](https://stephenturner.github.io/deseq-to-fgsea/) vignette. The [fgsea vignette](https://bioconductor.org/packages/release/bioc/vignettes/fgsea/inst/doc/fgsea-tutorial.html) also has additional useful information.
 
@@ -138,38 +81,26 @@ Each row corresponds to a tested pathway. The columns are the following:
 
 Here we are arranging the tables by normalized enrichment score (NES), positive to negative.
 
-```{r pfgsea}
-fgsea <- pfgsea(
-    rankedList = ranked_list,
-    gmtFiles = gmt_files,
-    nPerm = params$n_perm,
-    minSize = params$min_size,
-    maxSize = params$max_size
-)
-assignAndSaveData(
-    name = paste(name, "fgsea", sep = "_"),
-    object = fgsea,
-    dir = params$rdata_dir
-)
-```
+# Export tables
+
+Here we are exporting the GSEA tables from the object, orgaized per contrast.
 
 ```{r export}
-export(fgsea, dir = params$output_dir)
+export(object, dir = params$output_dir)
 ```
 
 # Hallmark
 
 First, let's use the *Homo sapiens* Hallmark collection from MSigDb. Hallmark gene sets summarize and represent specific well-defined biological states or processes and display coherent expression. These gene sets were generated by a computational methodology based on identifying overlaps between gene sets in other MSigDb collections and retaining genes that display coordinate expression.
 
-The `fgsea::gmtPathways()` function will take a GMT file from MSigDb and turn it into a list. Each element in the list is a character vector of genes in the pathway.
+The `object::gmtPathways()` function will take a GMT file from MSigDb and turn it into a list. Each element in the list is a character vector of genes in the pathway.
 
 ## Top tables {.tabset}
 
 ```{r h-top-tables, results="asis"}
 topTables(
-    object = fgsea,
+    object = object,
     collection = "h",
-    alpha = params$alpha,
     n = params$n_pathways,
     headerLevel = 3
 )
@@ -179,9 +110,8 @@ topTables(
 
 ```{r h-plot-gsea-table, results="asis"}
 plotGSEATable(
-    object = fgsea,
+    object = object,
     collection = "h",
-    alpha = params$alpha,
     n = params$n_pathways,
     headerLevel = 3
 )
@@ -191,7 +121,7 @@ plotGSEATable(
 
 ```{r h-plot-enrichment, results="asis"}
 plotEnrichment(
-    object = fgsea,
+    object = object,
     collection = "h",
     alpha = params$alpha,
     n = params$n_pathways,
@@ -205,7 +135,7 @@ plotEnrichment(
 
 ```{r c1-top-tables, results="asis"}
 topTables(
-    object = fgsea,
+    object = object,
     collection = "c1",
     alpha = params$alpha,
     n = params$n_pathways,
@@ -217,7 +147,7 @@ topTables(
 
 ```{r c1-plot-gsea-table, results="asis"}
 plotGSEATable(
-    object = fgsea,
+    object = object,
     collection = "c1",
     alpha = params$alpha,
     n = params$n_pathways,
@@ -229,7 +159,7 @@ plotGSEATable(
 
 ```{r c1-plot-enrichment, results="asis"}
 plotEnrichment(
-    object = fgsea,
+    object = object,
     collection = "c1",
     alpha = params$alpha,
     n = params$n_pathways,
@@ -243,7 +173,7 @@ plotEnrichment(
 
 ```{r c2-top-tables, results="asis"}
 topTables(
-    object = fgsea,
+    object = object,
     collection = "c2",
     alpha = params$alpha,
     n = params$n_pathways,
@@ -255,7 +185,7 @@ topTables(
 
 ```{r c2-plot-gsea-table, results="asis"}
 plotGSEATable(
-    object = fgsea,
+    object = object,
     collection = "c2",
     alpha = params$alpha,
     n = params$n_pathways,
@@ -267,7 +197,7 @@ plotGSEATable(
 
 ```{r c2-plot-enrichment, results="asis"}
 plotEnrichment(
-    object = fgsea,
+    object = object,
     collection = "c2",
     alpha = params$alpha,
     n = params$n_pathways,
@@ -281,7 +211,7 @@ plotEnrichment(
 
 ```{r c3-top-tables, results="asis"}
 topTables(
-    object = fgsea,
+    object = object,
     collection = "c3",
     alpha = params$alpha,
     n = params$n_pathways,
@@ -293,7 +223,7 @@ topTables(
 
 ```{r c3-plot-gsea-table, results="asis"}
 plotGSEATable(
-    object = fgsea,
+    object = object,
     collection = "c3",
     alpha = params$alpha,
     n = params$n_pathways,
@@ -305,7 +235,7 @@ plotGSEATable(
 
 ```{r c3-plot-enrichment, results="asis"}
 plotEnrichment(
-    object = fgsea,
+    object = object,
     collection = "c3",
     alpha = params$alpha,
     n = params$n_pathways,
@@ -319,7 +249,7 @@ plotEnrichment(
 
 ```{r c4-top-tables, results="asis"}
 topTables(
-    object = fgsea,
+    object = object,
     collection = "c4",
     alpha = params$alpha,
     n = params$n_pathways,
@@ -331,7 +261,7 @@ topTables(
 
 ```{r c4-plot-gsea-table, results="asis"}
 plotGSEATable(
-    object = fgsea,
+    object = object,
     collection = "c4",
     alpha = params$alpha,
     n = params$n_pathways,
@@ -343,7 +273,7 @@ plotGSEATable(
 
 ```{r c4-plot-enrichment, results="asis"}
 plotEnrichment(
-    object = fgsea,
+    object = object,
     collection = "c4",
     alpha = params$alpha,
     n = params$n_pathways,
@@ -357,7 +287,7 @@ plotEnrichment(
 
 ```{r c5-top-tables, results="asis"}
 topTables(
-    object = fgsea,
+    object = object,
     collection = "c5",
     alpha = params$alpha,
     n = params$n_pathways,
@@ -369,7 +299,7 @@ topTables(
 
 ```{r c5-plot-gsea-table, results="asis"}
 plotGSEATable(
-    object = fgsea,
+    object = object,
     collection = "c5",
     alpha = params$alpha,
     n = params$n_pathways,
@@ -381,7 +311,7 @@ plotGSEATable(
 
 ```{r c5-plot-enrichment, results="asis"}
 plotEnrichment(
-    object = fgsea,
+    object = object,
     collection = "c5",
     alpha = params$alpha,
     n = params$n_pathways,
@@ -395,7 +325,7 @@ plotEnrichment(
 
 ```{r c6-top-tables, results="asis"}
 topTables(
-    object = fgsea,
+    object = object,
     collection = "c6",
     alpha = params$alpha,
     n = params$n_pathways,
@@ -407,7 +337,7 @@ topTables(
 
 ```{r c6-plot-gsea-table, results="asis"}
 plotGSEATable(
-    object = fgsea,
+    object = object,
     collection = "c6",
     alpha = params$alpha,
     n = params$n_pathways,
@@ -419,7 +349,7 @@ plotGSEATable(
 
 ```{r c6-plot-enrichment, results="asis"}
 plotEnrichment(
-    object = fgsea,
+    object = object,
     collection = "c6",
     alpha = params$alpha,
     n = params$n_pathways,
@@ -433,7 +363,7 @@ plotEnrichment(
 
 ```{r c7-top-tables, results="asis"}
 topTables(
-    object = fgsea,
+    object = object,
     collection = "c7",
     alpha = params$alpha,
     n = params$n_pathways,
@@ -445,7 +375,7 @@ topTables(
 
 ```{r c7-plot-gsea-table, results="asis"}
 plotGSEATable(
-    object = fgsea,
+    object = object,
     collection = "c7",
     alpha = params$alpha,
     n = params$n_pathways,
@@ -457,7 +387,7 @@ plotGSEATable(
 
 ```{r c7-plot-enrichment, results="asis"}
 plotEnrichment(
-    object = fgsea,
+    object = object,
     collection = "c7",
     alpha = params$alpha,
     n = params$n_pathways,
