--- a/inst/rmarkdown/templates/pfgsea/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/pfgsea/skeleton/skeleton.Rmd
@@ -1,10 +1,22 @@
 ---
-## Updated 2019-09-11.
+## Updated 2019-10-11.
 params:
   title: "Gene Set Enrichment Analysis"
-  fgsealist_file: "rds/YYYY-MM-DD/object.rds"
+  
+  ## Use FGSEAList object as input.
+  ## - Standard: Load from file on disk, either RDS or RDA.
+  ## - Advanced: Loop across multiple objects using `rmarkdown::render()`.
+  object: "rds/YYYY-MM-DD/object.rds"
+  
+  ## The `name` param is only required when passing in object directly, during
+  ## an `rmarkdown::render()` call. See `object` param.
+  name: ""
+  
+  ## Number of pathways in each direction, upregulated or downregulated.
+  n_pathways: 5
+  
   output_dir: !r file.path("results", Sys.Date(), "gsea")
-  n_pathways: 10
+  
 title: "`r params$title`"
 author: "`r getOption('author')`"
 date: "`r Sys.Date()`"
@@ -15,6 +27,8 @@ bibliography: bibliography.bib
 library(pfgsea)
 prepareTemplate()
 source("_setup.R")
+## This is required for tabset R Markdown headers to work in `lapply()` call.
+knitr::opts_chunk[["set"]](message = FALSE)
 ```
 
 ```{r header, child="_header.Rmd"}
@@ -27,13 +41,21 @@ Note that we have switched to MSigDB 7.0 (August 2019) from 6.2.
 Import the `FGSEAList` S4 class object. This single object contains everything we need to visualize the GSEA results.
 
 ```{r load-object}
-file <- params$fgsealist_file
-object <- import(file)
-name <- basenameSansExt(file)
-rm(file)
+if (is.character(params$object)) {
+    file <- params$object
+    object <- import(file)
+    name <- params$name
+    if (!isTRUE(nzchar(name))) {
+      name <- basenameSansExt(file)
+    }
+    rm(file)
+} else {
+    object <- params$object
+    name <- params$name
+}
 stopifnot(
     is(object, "FGSEAList"),
-    is.character(name)
+    isTRUE(nzchar(name))
 )
 invisible(validObject(object))
 print(object)
