--- a/inst/rmarkdown/templates/fgsea/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/fgsea/skeleton/skeleton.Rmd
@@ -1,5 +1,5 @@
 ---
-## Updated 2019-10-11.
+## Updated 2020-05-12.
 params:
   title: "Gene Set Enrichment Analysis"
   
@@ -24,7 +24,7 @@ bibliography: bibliography.bib
 ---
 
 ```{r setup, message=FALSE}
-library(pfgsea)
+library(acidgsea)
 prepareTemplate()
 source("_setup.R")
 ## This is required for tabset R Markdown headers to work in `lapply()` call.
