Update and rename acidgsea.Rmd to AcidGSEA.Rmd

--- a/vignettes/AcidGSEA.Rmd
+++ b/vignettes/AcidGSEA.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "acidgsea"
+title: "AcidGSEA"
 date: "`r BiocStyle::doc_date()`"
 output: BiocStyle::html_document
 bibliography: '`r system.file("rmarkdown", "shared", "bibliography.bib", package = "basejump")`'
