--- a/inst/rmarkdown/templates/fgsea/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/fgsea/skeleton/skeleton.Rmd
@@ -6,7 +6,7 @@ params:
   ## Use FGSEAList object as input.
   ## - Standard: Load from file on disk, either RDS or RDA.
   ## - Advanced: Loop across multiple objects using `rmarkdown::render()`.
-  object: "rds/YYYY-MM-DD/object.rds"
+  object: !r file.path("rds", "YYYY-MM-DD", "object.rds")
   
   ## The `name` param is only required when passing in object directly, during
   ## an `rmarkdown::render()` call. See `object` param.
@@ -24,7 +24,9 @@ bibliography: bibliography.bib
 ---
 
 ```{r setup, message=FALSE}
-library(acidgsea)
+suppressPackageStartupMessages({
+    library(AcidGSEA)
+})
 prepareTemplate()
 source("_setup.R")
 ## This is required for tabset R Markdown headers to work in `lapply()` call.
