Convert FIXME into a todo

--- a/todo.org
+++ b/todo.org
@@ -1,1 +1,5 @@
 ** TODO Compare results against GSEA Java client and gseapy Python approach.
+** TODO `convertToHuman: May need to ensure that GenomicRanges are sorted by
+   identifier name, or we may need to filter out scaffold identifiers.
+   Otherwise, could potentially run into unwanted matches:
+   e.g. "FH" vs. "LRG_504".
