--- a/inst/rmarkdown/templates/fgsea/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/fgsea/skeleton/skeleton.Rmd
@@ -1,12 +1,12 @@
 ---
-## Updated 2021-03-16.
+## Updated 2021-12-14.
 params:
   title: "Gene Set Enrichment Analysis"
   
   ## Use FGSEAList object as input.
   ## - Standard: Load from file on disk, either RDS or RDA.
   ## - Advanced: Loop across multiple objects using `rmarkdown::render()`.
-  object: !r file.path("rds", "YYYY-MM-DD", "object.rds")
+  object: !r file.path("rds", Sys.Date(), "object.rds")
   
   ## The `name` param is only required when passing in object directly, during
   ## an `rmarkdown::render()` call. See `object` param.
